<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SplashActivity">


    <TextView
        android:id="@+id/logo_name"
        android:transitionName="logo_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/momcake_bold"
        android:padding="20dp"
        android:text="@string/title"
        android:textColor="@color/colorMainText"
        android:textAlignment="center"
        android:textSize="50sp" />

    <ImageView
        android:id="@+id/pin"
        android:transitionName="pin"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-20dp"
        android:layout_above="@+id/car"
        android:src="@drawable/pin" />

    <ImageView
        android:id="@+id/car"
        android:transitionName="car"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/car" />

    <ImageView
        android:id="@+id/guy"
        android:transitionName="guy"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:layout_centerVertical="true"
        android:src="@drawable/guy" />

    <LinearLayout
        android:id="@+id/solgan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/made_with"
            android:textColor="@color/colorMainText"
            android:textSize="18sp"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/love"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/colorMainText"
            android:text="@string/in"
            android:textSize="18sp"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/india"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

</RelativeLayout>
